# CleanDay

./: .replit  README.md  game.sqlite  pyproject.toml  replit.md
app/: db.py  main.py  models.py  sprites.py  utils.py
app/genetics/: engine.py  traits.json
app/routes/: game.py  market.py
app/static/: styles.css
app/templates/: base.html  breeding.html  greenhouse.html  index.html  market.html  seed_detail.html  seeds.html
app/templates/partials/: slot_modal.html
attached_assets/: Pasted--gitignore-gitignore-pycache-pyc-venv-env-db-sqlite-replit-run--1754759927598_1754759927601.txt  Pasted-Alright-beast-here-s-the-Day-2-5-drop-with-Selfing-kept-Random-lot-sizes-biased-by-parent-healt-1754764639693_1754764639699.txt  Pasted-Alright-captain-here-s-Phase-2-fully-wired-environment-slots-soil-light-water-temp-growth-stage-1754766109068_1754766109071.txt  Pasted-Hell-yeah-let-s-add-a-clean-Are-you-sure-modal-that-still-uses-POST-for-new-game-Paste-these-up-1754763665944_1754763665947.txt  Pasted-You-got-it-Here-s-the-clean-Day-1-scaffold-fixed-minimal-and-ready-for-Codex-Replit-Paste-this-w-1754759262048_1754759262050.txt
