[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.112.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "pydantic==2.8.2",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.36",
    "uvicorn==0.30.6",
]
